Fix bug where text adjusts on mobile phones

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ table {
 th, td {
     padding: 0.25rem;
     transition: all 0.3s;  /* Simple transition for hover effect */
-    min-width: 100px;
     font-size: 16px;
+    text-size-adjust: none;
 }
 
 th {
